fixed bug ctrlKey multiselector,changed to shift, removed colorWheel

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ button:hover {
 }
 
 #color-wheel-container {
-    display: none;
+    display: block;
     position: fixed;
     height: 150px;
     width: 150px;
@@ -133,27 +133,15 @@ button:hover {
 }
 
 .wheel {
+    display : block;
     position: fixed;
     z-index: 20;
-    width: 130px;
-    height: 130px;
-    border-radius: 100%;
     right: 105px;
     bottom: 572px;
 }
 
 .wheel:hover {
     cursor: crosshair;
-}
-
-#black-white-wheel {
-    background: linear-gradient(black, white);
-    display: none;
-}
-
-#rainbow-wheel {
-    background: conic-gradient( yellow, lime, aqua, blue, magenta, red, yellow );
-    display: none;
 }
 
 #orange {
@@ -196,12 +184,12 @@ button:hover {
     background-color: purple;
 }
 
-#blackandwhite {
-    background: linear-gradient( #000,#fff);
+#black {
+    background: black;
 }
 
-#rainbow {
-    background: conic-gradient( yellow, lime, aqua, blue, magenta, red, yellow );
+#gray {
+    background: gray;
 }
 
 
